// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render collapsed sortable block 1`] = `
<section
  class="block"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-more"
      class="sortableHandle su-more"
    />
  </div>
  <div
    class="content"
  >
    <article />
  </div>
</section>
`;

exports[`Render expanded sortable block 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-more"
      class="sortableHandle su-more"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-trash-alt"
          class="su-trash-alt clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-times"
          class="su-times clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content
    </article>
  </div>
</section>
`;

exports[`Render expanded sortable block with types 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-more"
      class="sortableHandle su-more"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="types"
      >
        <div
          class="select"
        >
          <button
            class="displayValue default"
            type="button"
          >
            <div
              aria-label="Type 2"
              class="croppedText"
              title="Type 2"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Typ
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  e 2
                </span>
              </div>
              <div
                class="whole"
              >
                Type 2
              </div>
            </div>
            <span
              aria-label="su-angle-down"
              class="toggle su-angle-down"
            />
          </button>
        </div>
      </div>
      <div
        class="icons"
      >
        <span
          aria-label="su-trash-alt"
          class="su-trash-alt clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-times"
          class="su-times clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content and type type2
    </article>
  </div>
</section>
`;

exports[`Render expanded sortable block without remove icon 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-more"
      class="sortableHandle su-more"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-times"
          class="su-times clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content
    </article>
  </div>
</section>
`;
